syntax="proto3";

option go_package="./pb";

package proto;

message UserInfo {
  string email = 2;
  string role = 3;
}


message UserCredentials {
  string email = 1;
  string password = 2;
}

message Tokens {
  string access_token = 1;
  string refresh_token = 2;
  string userId = 3;
}

message RefreshRequest {
  string token = 1;
}

message RefreshResponse{
  map<string, string> tokens = 1;
}

message Token {
  string token = 1;
}

message ValidateTokenResponse {
  string token = 1;
  string email = 2;
}


message OTPInfo{
  string OTP = 1;
  string email = 2;
}

message IsOTPValidated{
  bool validated = 1;
}